--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Publish to GitHub Packages Apache Maven
       run: |
-        mkdir ~/.m2
+        mkdir -p ~/.m2
         echo "<settings><servers><server><id>github</id><username>OWNER</username><password>${GITHUB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
         mvn deploy -s $GITHUB_WORKSPACE/settings.xml
       env:
