--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
          <repository>
                    <id>github</id>
                    <name>GitHub OWNER Apache Maven Packages</name>
-                   <url>https://maven.pkg.github.com/OWNER/REPOSITORY</url>
+                   <url>https://maven.pkg.github.com/marcelmaatkamp/StringFormatter</url>
           </repository>
 </distributionManagement>
 </project>
